@@ -1,5 +1,9 @@
 Endgame: Singularity Changelog
 
+- Fixed --singledir and --multidir being ignored for saves, preferences, music
+  and error log. Also, if possible (Python >= 2.6), error.log is now created
+  only when (and if) an error actually occurs. (MestreLion)
+
 v0.30c (release 2011.06.11):
 
 USER-VISIBLE CHANGES:
